amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-argument-missing-value.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-argument-missing-value.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-extension-argument-type
  Message: Missing required argument text
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-argument-missing-value.api.graphql#/web-api/customDomainProperties/MyDirective
  Property: http://a.ml/vocabularies/document#definedBy
  Range: [(1,7)-(1,19)]
  Location: 
